--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -5,27 +5,29 @@
 
 * Inbox
 * Next Action
-** WAIT [#B] 购买家具用品 [0%]                                   :shopping:
+** WAIT [#B] 购买家具用品 [0%]                                    :shopping:
 :PROPERTIES:
 :BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
 :COOKIE_DATA: checkbox recursive
 :ORDERED: nil
 :END:
- - [ ] :: 床褥
- - [ ] :: 牙具 [0/2]
-   - [ ] 牙膏
+ - [ ] 床褥 :: 
+ - [ ] 牙具 [0/2]
+   - [ ] 牙膏 
    - [ ] 牙刷
- - [ ] :: 剪刀
- - [ ] :: 水果刀
- - [ ] :: 电热水壶
- - [ ] :: 玻璃水杯
- - [ ] :: 拖布
- - [ ] :: 扫把和簸箕
- - [ ] :: 桌子
- - [ ] :: 人体工学椅子
- - [ ] :: 路由器
- - [ ] :: 自行车水杯
-** WAIT [#C] 办理电信宽带业务                                       :event:
+ - [ ] 剪刀 :: 
+ - [ ] 水果刀 :: 
+ - [ ] 电热水壶 :: 
+ - [ ] 玻璃水杯 :: 
+ - [ ] 拖布 :: 
+ - [ ] 扫把和簸箕 :: 
+ - [ ] 桌子 :: 
+ - [ ] 人体工学椅子 :: 
+ - [ ] 路由器 :: 
+ - [ ] 自行车水杯 :: 
+ - [ ] 鞋刷 ::
+ - [ ] 硬板鞋垫 :: 无异味
+** WAIT [#C] 办理电信宽带业务                                        :event:
 :PROPERTIES:
 :BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
 :END:
